--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@ a:hover {
   text-decoration: none;
 }
 
+.btn.btn-primary {
+  color: #fff;
+  background-color: #674cf3;
+  border-color: #674cf3;
+}
+
+
 /* Font */
 
 h1.h1,
