--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -3,6 +3,7 @@
   margin-top: 96px;
   font-family: 'Quicksand', sans-serif;
   background: url('../../Images/hero_bg.png') no-repeat center/cover;
+  background-size: 100% 100%;
 }
 
 h5.h5.HeroSubTitle {
