--- a/src/Components/VideoSection/VideoSection.css
+++ b/src/Components/VideoSection/VideoSection.css
@@ -1,10 +1,10 @@
 .VideoSectionDiv {
-  width: calc(100vw - 32px);
   margin: 0 auto 120px;
 }
 
 video {
-  width: 100%;
+  height: auto;
+  width: auto;
   margin-top: 104px;
   border-radius: 10px;
   box-shadow: 0 0 79px 0 rgba(16, 66, 97, 0.1);
@@ -34,23 +34,25 @@ video {
 }
 
 @media only screen and (min-width: 576px) {
-  .VideoSectionDiv {
-    width: 512px;
+  /* .VideoSectionDiv {
+    height: 512px;
+  } */
+
+  video {
+    height: 340px;
   }
 }
 
 @media only screen and (min-width: 769px) {
   .PinkCircle {
-    right: -60px;
+    right: 120px;
   }
-  .VideoSectionDiv {
-    width: 512px;
-  }
+  
   .PurpleBlob {
     width: 420px;
     height: 420px;
-    left: -120px;
-    top: 78px;
+    left: 60px;
+    top: 120px;
   }
 }
 
