--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -33,6 +33,7 @@
   content: "";
   display: block;
   background: url("../../Images/double_quote.png") no-repeat center/cover;
+  background-size: 100% 100%;
 }
 
 .clientLogos {
