--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,4 +1,3 @@
-
 .logo {
   width: 128px;
   height: 32px;
@@ -24,7 +23,7 @@
 } */
 
 .MainContainer.NavbarItems {
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   margin: 0 auto;
   padding: 16px 0;
   display: flex;
@@ -69,7 +68,6 @@
   letter-spacing: normal;
 }
 
-
 .btn.schedule-btn {
   transition: all 0.5s;
   margin-right: 12px;
@@ -87,7 +85,15 @@
 }
 
 .btn.login-btn {
-  border: solid 1px #c3cde4;
+  /* border: solid 1px #c3cde4; */
+  color: #674cf3;
+  border-color: #674cf3;
+}
+
+.btn.login-btn:focus,
+.btn.schedule-btn:focus {
+  outline: none;
+  box-shadow: none;
 }
 
 @media only screen and (min-width: 576px) {
@@ -104,4 +110,3 @@
     padding: 27px 0;
   }
 }
-
