--- a/src/Components/VideoSection/NewVideoSection.css
+++ b/src/Components/VideoSection/NewVideoSection.css
@@ -1,4 +1,3 @@
-
 .featured-video {
   margin-bottom: 64px;
 }
@@ -10,7 +9,7 @@
   flex-wrap: wrap;
   margin: 4% -2.5%;
   max-width: 105%;
-} 
+}
 
 .row-narrow {
   margin: 120px auto 132px;
@@ -26,10 +25,11 @@
   max-width: 100%;
 }
 
-.column.centered, .column .centered {
+.column.centered,
+.column .centered {
   text-align: center;
-  -webkit-box-align: center!important;
-  align-items: center!important;
+  -webkit-box-align: center !important;
+  align-items: center !important;
 }
 .column {
   display: -webkit-box;
@@ -47,7 +47,7 @@
   display: -webkit-box;
   display: flex;
   -webkit-box-flex: 1;
-    flex: 1;
+  flex: 1;
 }
 
 .video-popup {
@@ -65,7 +65,7 @@
   width: 160px;
   height: 160px;
   border-radius: 2000px;
-  background: rgba(255,74,158,.5);
+  background: rgba(255, 74, 158, 0.5);
   right: -50px;
   top: -60px;
 }
@@ -77,15 +77,14 @@
   z-index: -1;
 }
 
-
 .play-button-container {
   width: 96px;
   height: 96px;
   position: absolute;
   left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   z-index: 2;
   border-radius: 100px;
   -webkit-border-radius: 100px;
@@ -96,11 +95,20 @@
   align-items: center;
   -webkit-box-pack: center;
   justify-content: center;
-  background: -webkit-linear-gradient(330deg,rgba(255,255,255,0) 0%,rgba(255,255,255,.2) 100%);
-  background: linear-gradient(120deg,rgba(255,255,255,0) 0%,rgba(255,255,255,.2) 100%);
+  background-color: rgba(128, 57, 219, 0.3);
+  /* background: -webkit-linear-gradient(
+    330deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.2) 100%
+  );
+  background: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.2) 100%
+  ); */
   box-shadow: 0 24px 72px 0 rgb(0 0 0 / 50%);
-  -webkit-transition: 300ms all cubic-bezier(.4,0,.2,1);
-  transition: 300ms all cubic-bezier(.4,0,.2,1);
+  -webkit-transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .play-button-container .play-button {
@@ -115,8 +123,8 @@
   align-items: center;
   -webkit-box-pack: center;
   justify-content: center;
-  -webkit-transition: 300ms all cubic-bezier(.4,0,.2,1);
-  transition: 300ms all cubic-bezier(.4,0,.2,1);
+  -webkit-transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .play-button-container .play-button svg {
@@ -138,18 +146,20 @@
   object-fit: cover;
   max-width: 100%;
   align-self: center;
-  -webkit-transition: 300ms all cubic-bezier(.4,0,.2,1);
-  transition: 300ms all cubic-bezier(.4,0,.2,1);
+  -webkit-transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
   visibility: visible;
   opacity: 1;
 }
-.card.card-full-bleed, img.card {
+.card.card-full-bleed,
+img.card {
   padding: 0;
   border-radius: 8px;
   background-color: #fff;
-  -webkit-transition: 300ms all cubic-bezier(.4,0,.2,1);
-  transition: 300ms all cubic-bezier(.4,0,.2,1);
-  box-shadow: 0 8px 60px 0 rgb(103 151 255 / 11%), 0 12px 90px 0 rgb(103 151 255 / 11%);
+  -webkit-transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0 8px 60px 0 rgb(103 151 255 / 11%),
+    0 12px 90px 0 rgb(103 151 255 / 11%);
 }
 
 /* img:not(.lazy) {
@@ -164,10 +174,19 @@
   background-color: red;
   z-index: 1;
   position: absolute;
+  opacity: 0.4;
   top: 0;
   right: 0;
-  background: -webkit-linear-gradient(330deg,rgba(103,151,255,.5) 0%,#8f42ec 100%);
-  background: linear-gradient(120deg,rgba(103,151,255,.5) 0%,#8f42ec 100%);
+  background: -webkit-linear-gradient(
+    330deg,
+    rgba(103, 151, 255, 0.5) 0%,
+    #8f42ec 100%
+  );
+  background: linear-gradient(
+    120deg,
+    rgba(103, 151, 255, 0.5) 0%,
+    #8f42ec 100%
+  );
 }
 
 @media only screen and (min-width: 769px) {
