--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -86,6 +86,12 @@
 
 .btn.login-btn {
   /* border: solid 1px #c3cde4; */
+  color: #2e3e6a;
+  border-color: #c3cde4;
+}
+
+.btn.login-btn:hover {
+  /* box-shadow: 0 1px 20px 0 #c3cde4; */
   color: #674cf3;
   border-color: #674cf3;
 }
