schedule form checkbox fix

--- a/src/Components/ScheduleADemo/ScheduleADemo.css
+++ b/src/Components/ScheduleADemo/ScheduleADemo.css
@@ -66,6 +66,7 @@
   display: flex !important;
   align-items: center;
   margin-top: 1rem;
+  font-weight: 600;
 }
 
 .schedule-form-checkbox input {
