--- a/src/Components/VideoSection/NewVideoSection.css
+++ b/src/Components/VideoSection/NewVideoSection.css
@@ -65,14 +65,16 @@
   width: 160px;
   height: 160px;
   border-radius: 2000px;
-  background: rgba(255, 74, 158, 0.5);
+  /* background: rgba(255, 74, 158, 0.3); */
+  background: rgba(254, 167, 207, 0.5);
   right: -50px;
   top: -60px;
 }
 
 .featured-video .video-btn.video-popup > svg {
   bottom: -28%;
-  left: -32%;
+  /* left: -32%; */
+  left: -23%;
   position: absolute;
   z-index: -1;
 }
@@ -112,6 +114,7 @@
 }
 
 .play-button-container .play-button {
+  cursor: pointer;
   z-index: 2;
   width: 72px;
   height: 72px;
@@ -125,9 +128,24 @@
   justify-content: center;
   -webkit-transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
   transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 17px 16.2px 16px 24px;
 }
 
-.play-button-container .play-button svg {
+.play-button-container:hover {
+  width: 88px;
+  height: 88px;
+}
+
+.play-button-container:hover .play-button {
+  width: 73px;
+  height: 74px;
+}
+
+.play-button-container .play-button img {
   width: 34px;
   height: 34px;
 }
@@ -146,6 +164,7 @@
   object-fit: cover;
   max-width: 100%;
   align-self: center;
+  border: none;
   -webkit-transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
   transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
   visibility: visible;
