--- a/src/routes/help.css
+++ b/src/routes/help.css
@@ -104,6 +104,7 @@
 }
 
 .help-card-body {
+  padding: 0 1.25rem 1.25rem 1.25rem !important;
   font-weight: normal !important;
   font-stretch: normal !important;
   font-style: normal !important;
