--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -31,7 +31,7 @@ h5.h5.HeroSubTitle {
   opacity: 0.5;
   margin: auto 8px auto 12px;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 600;
   font-style: normal;
   line-height: 0.88;
   letter-spacing: normal;
@@ -69,6 +69,8 @@ h5.h5.HeroSubTitle {
 
 .search-container .search-results {
   position: absolute;
+  margin: 0 !important;
+  padding: 0 !important;
   width: 100%;
   padding: 8px 8px 8px 16px;
   top: 56px;
@@ -76,23 +78,88 @@ h5.h5.HeroSubTitle {
   text-align: left;
   border-radius: 14px;
   border: solid 1px #c3cde4;
-  background-color: #f6f8fd;
-  font-size: 16px;
-  font-weight: 500;
-  font-style: normal;
-  line-height: 0.88;
-  letter-spacing: normal;
-  color: #5b636a;
+  background-color: #fff;
+  /* font-family: Quicksand; */
+  /* font-size: 16px; */
+  /* font-weight: 500; */
+  /* font-style: normal; */
+  /* line-height: 0.88; */
+  /* letter-spacing: normal; */
+  /* color: #5b636a; */
 }
 
-.search-results li {
+.search-results div {
   list-style: none;
-  margin: 2px auto;
+  margin: 0;
   cursor: pointer;
-  padding: 5px;
+  /* padding: 5px; */
 }
 
-.search-results li:hover {
+.search-results div:hover {
   background-color: #eee !important;
-  border-radius: 2px;
+  /* border-radius: 2px; */
+}
+
+.search-result-card {
+  padding: 12px 12px !important;
+  margin: auto 12px !important;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: solid 0.5px #dfdfdf;
+  background-color: #ffffff;
+}
+
+.search-result-card .details-div .heading {
+  font-family: Quicksand;
+  font-size: 12px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  text-align: left;
+  color: #272727;
+  margin-bottom: 7px !important;
+  /* width: 26px; */
+  height: 15px;
+}
+
+.search-result-card .details-div .sub-heading {
+  font-family: Quicksand;
+  font-size: 10px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.4;
+  letter-spacing: normal;
+  text-align: left;
+  color: #5b636a;
+  margin-bottom: 0;
+  /* width: 90px; */
+  height: 14px;
+}
+
+.search-result-card .inventory .pack-size {
+  font-size: 10px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.4;
+  letter-spacing: normal;
+  text-align: right;
+  color: #5b636a;
+  margin-bottom: 7px !important;
+}
+
+.search-result-card .inventory .price {
+  font-size: 12px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.25;
+  letter-spacing: 0.58px;
+  text-align: right;
+  color: #5b636a;
+  margin-bottom: 0;
 }
