--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -77,15 +77,9 @@ h5.h5.HeroSubTitle {
   left: 0;
   text-align: left;
   border-radius: 14px;
-  border: solid 1px #c3cde4;
   background-color: #fff;
-  /* font-family: Quicksand; */
-  /* font-size: 16px; */
-  /* font-weight: 500; */
-  /* font-style: normal; */
-  /* line-height: 0.88; */
-  /* letter-spacing: normal; */
-  /* color: #5b636a; */
+  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.16);
+  /* border: solid 0.5px #dfdfdf; */
 }
 
 .search-results div {
@@ -96,7 +90,7 @@ h5.h5.HeroSubTitle {
 }
 
 .search-results div:hover {
-  background-color: #eee !important;
+  /* background-color: #eee !important; */
   /* border-radius: 2px; */
 }
 
@@ -112,7 +106,7 @@ h5.h5.HeroSubTitle {
 
 .search-result-card .details-div .heading {
   font-family: Quicksand;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
@@ -127,7 +121,7 @@ h5.h5.HeroSubTitle {
 
 .search-result-card .details-div .sub-heading {
   font-family: Quicksand;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
@@ -141,7 +135,7 @@ h5.h5.HeroSubTitle {
 }
 
 .search-result-card .inventory .pack-size {
-  font-size: 10px;
+  font-size: 12px;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
@@ -153,7 +147,7 @@ h5.h5.HeroSubTitle {
 }
 
 .search-result-card .inventory .price {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 500;
   font-stretch: normal;
   font-style: normal;
