--- a/src/Components/ScheduleADemo/ScheduleADemo.css
+++ b/src/Components/ScheduleADemo/ScheduleADemo.css
@@ -56,9 +56,14 @@
   color: #5b636a !important;
 }
 
+.schedule-form:not(:placeholder-shown) {
+  font-size: 13px !important;
+  font-weight: 600 !important;
+}
+
 .schedule-form:focus {
   outline: none !important;
-  box-shadow: 0 0 3px 1px #c3cde4 !important;
+  box-shadow: 0 0 3px 1px rgba(30, 143, 255, 0.5) !important;
 }
 
 .schedule-checkbox-container {
@@ -104,6 +109,8 @@
   background-color: #fff;
   border: 1px solid rgba(91, 99, 106, 0.49);
   border-radius: 6px;
+  -webkit-transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* On mouse-over, add a grey background color */
@@ -252,7 +259,8 @@
 
 .sample-input-text:focus {
   outline: none !important;
-  box-shadow: 0 0 3px 1px #c3cde4;
+  /* box-shadow: 0 0 3px 1px #c3cde4; */
+  box-shadow: 0 0 3px 1px rgba(30, 143, 255, 0.5) !important;
 }
 
 .sample-input-text {
