--- a/src/Components/LetsStartSection/LetsStartSection.css
+++ b/src/Components/LetsStartSection/LetsStartSection.css
@@ -7,7 +7,11 @@
   margin: 136px auto 148px;
   border-radius: 14px;
   box-shadow: -35.5px 20.5px 79px 0 rgba(103, 76, 243, 0.3);
-  background: #6c19d8 url('../../Images/LetsStartBG.png') no-repeat center/cover;
+  background: #6c19d8 url("../../Images/LetsStartBG.png") no-repeat center/cover;
+}
+
+.LetsStartSectionCard h3 {
+  margin-bottom: 20px;
 }
 
 .btn.demo-card-btn {
@@ -34,7 +38,7 @@
   z-index: -1;
   bottom: 0;
   left: 0px;
-  background: url('../../Images/Blob2.png') no-repeat center/cover;
+  background: url("../../Images/Blob2.png") no-repeat center/cover;
 }
 
 .orange-circle {
@@ -59,7 +63,6 @@
   z-index: -1;
 }
 
-
 @media only screen and (min-width: 769px) {
   .LetsStartSectionCard {
     width: 896px;
@@ -72,6 +75,6 @@
   .purple-blob2 {
     left: -120px;
     width: 384px;
-    height: 415px;  
+    height: 415px;
   }
 }
